--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,7 @@ ul {
     font-size: 1.5rem;
 }
 
-.paragraph,
-.skills-list-items {
+.paragraph {
     font-size: 1.2rem;
     margin: 1% auto 2%;
     letter-spacing: 0.1rem;
@@ -108,8 +107,7 @@ ul {
         font-size: 1.5rem;
     }
 
-    .paragraph,
-    .skills-list-items {
+    .paragraph {
         font-size: 1rem;
     }
 
