--- a/partials/footer/footer-styles.css
+++ b/partials/footer/footer-styles.css
@@ -5,7 +5,7 @@
 .footer .separator {
   height: 2px;
   width: 100%;
-  background-color: #222429;
+  background-color: var(--dark);
   margin: 2% auto 1%;
 }
 
