--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,4 +28,6 @@
       </nav>
     {%- endif -%}
   </div>
+  <!-- Import SimpleJekyllSearch scripts by CDN -->
+  <script src="https://cdn.rawgit.com/christian-fei/Simple-Jekyll-Search/master/dest/simple-jekyll-search.min.js"></script>
 </header>
